[package]
name = "microredis"
version = "0.1.0"
authors = ["Cesar Rodas <cesar@rodasm.com.py>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-zero-parser = {path = "parser"}
tokio={version="1", features = ["full", "tracing"] }
tokio-util={version="^0.6", features = ["full"] }
futures = { version = "0.3.0", features = ["thread-pool"]}
tokio-stream="0.1"
seahash = "4"
bytes = "1"
