[package]
name = "microredis"
version = "0.1.0"
authors = ["Cesar Rodas <cesar@rodasm.com.py>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-zero-protocol-parser = {path = "redis-protocol-parser"}
tokio={version="1", features = ["full", "tracing"] }
tokio-util={version="^0.6", features = ["full"] }
crc32fast="^1.2"
futures = { version = "0.3.0", features = ["thread-pool"]}
tokio-stream="0.1"
seahash = "4"
log="0.4"
env_logger = "0.8.4"
bytes = "1"
rand = "0.8.0"

[workspace]
members = [
	"redis-protocol-parser",
]
