[package]
name = "microredis"
version = "0.1.0"
authors = ["Cesar Rodas <cesar@rodasm.com.py>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
byteorder = "1.2.2"
redis-zero-protocol-parser = "^0.3"
redis-config-parser = {path = "redis-config-parser"}
tokio={version="1", features = ["full", "tracing"] }
parking_lot="0.11.2"
tokio-util={version="^0.6", features = ["full"] }
crc32fast="1.3.2"
futures = { version = "0.3.0", features = ["thread-pool"]}
hex = "0.4.3"
git-version = "0.3.5"
tokio-stream="0.1"
seahash = "4"
glob="0.3.0"
flexi_logger="0.22.5"
metered="0.8.0"
serde="1.0.136"
serde-enum-str = "0.2"
serde_json = "1.0.70"
serde_prometheus="0.1.6"
sha2 = "0.10.2"
rand = "0.8.0"
log="0.4"
thiserror = "1.0.30"
strum = "0.24"
strum_macros = "0.24"
num-traits = "0.2.15"
paste = "1.0.7"

[workspace]
members = ["redis-config-parser"]
