[package]
name = "redis-config-parser"
version = "0.1.0"
authors = ["Cesar Rodas <cesar@rodasm.com.py>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.97", features = ["derive"]}
thiserror = "1.0.30"

[dev-dependencies]
serde-enum-str = "0.2"